force-app/main/default/objects/JTBD_Persona__c/JTBD_Persona__c.object-meta.xml
<CustomObject>
    <label>JTBD Persona</label>
    <pluralLabel>JTBD Personas</pluralLabel>
    <description>Object used to track and manage persona definitions for Jobs-to-be-Done analysis. Stores persona characteristics, roles, responsibilities, pain points, and tools used within the organization.</description>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>