force-app/main/default/objects/JTBD_Persona__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Detailed description of this persona including background, context, and key characteristics</description>
    <inlineHelpText>Provide a comprehensive description of this persona's background, work environment, team structure, and key characteristics that influence their job needs.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>