force-app/main/default/objects/JTBD_Persona__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <label>Goals</label>
    <description>Primary goals, objectives, and success metrics this persona is working toward</description>
    <inlineHelpText>Define what success looks like for this persona. Include both professional goals and personal motivations that drive their work behavior.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>