force-app/main/default/objects/JTBD_Persona__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <description>Common frustrations, challenges, or obstacles this persona faces in their day-to-day work</description>
    <inlineHelpText>Document recurring challenges, frustrations, or obstacles this persona encounters. Focus on systemic issues that impact their job performance.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>