force-app/main/default/objects/JTBD_Persona__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <description>Key responsibilities and duties that this persona is accountable for in their role</description>
    <inlineHelpText>List the main responsibilities, duties, or areas of accountability. Use bullet points or separate lines for multiple responsibilities.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>