force-app/main/default/objects/JTBD_Persona__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <description>The primary job title or role of this persona within their organization</description>
    <inlineHelpText>Enter the persona's job title, department role, or primary function (e.g., "Sales Manager", "Marketing Director", "Customer Support Rep")</inlineHelpText>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>