force-app/main/default/objects/JTBD_Persona__c/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <label>Tools</label>
    <description>Software, platforms, and tools this persona regularly uses to accomplish their work</description>
    <inlineHelpText>List the key software, platforms, applications, or tools this persona uses daily or regularly. Include both primary and secondary tools.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>